//  Copyright [2024] The Kubeflow Authors
//
//  Licensed under the Apache License, Version 2.0 (the "License");
//  you may not use this file except in compliance with the License.
//  You may obtain a copy of the License at
//
//  http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing, software
//  distributed under the License is distributed on an "AS IS" BASIS,
//  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//  See the License for the specific language governing permissions and
//  limitations under the License.

syntax = "proto3";

option go_package = "github.com/kubeflow/pipelines/backend/api/v2beta1/go_client";
package kubeflow.pipelines.backend.api.v2beta1;

import "google/api/annotations.proto";
import "google/api/httpbody.proto";

service ArtifactService {
  rpc ListArtifacts(ListArtifactRequest) returns (Artifact) {
    option (google.api.http) = {
      get: "/apis/v2beta1/artifacts"
    };
  }

  rpc GetArtifacts(GetArtifactRequest) returns (Artifact) {
    option (google.api.http) = {
      get: "/apis/v2beta1/artifacts/{artifact_id}"
    };
  }
}

message Artifact {
  string artifact_id = 1;
  string artifact_type = 2;
}

message GetArtifactRequest {
  string artifact_id = 1;
}

message ListArtifactRequest {
  string execution_id = 1;
}